package compressors;

public interface ICompressor {
    String getParameters();
}
